--- a/past-placements.html
+++ b/past-placements.html
@@ -396,8 +396,8 @@
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img class="d-block w-100" src="./images/Past Placements/2021 final.svg"
-                                                    alt="Placement Records">
+                                                <img class="d-block w-100" src="./images/Past Placements/2021 final.png"
+                                                    alt="Placement Records 2021">
                                             </div>
                                         </div>
                                         <a class="carousel-control-prev" href="#carousel1Controls" role="button"
@@ -474,8 +474,8 @@
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img class="d-block w-100" src="./images/Past Placements/2022 final.svg"
-                                                    alt="Placement Records">
+                                                <img class="d-block w-100" src="./images/Past Placements/2022 final.png"
+                                                    alt="Placement Records 2022">
                                             </div>
                                         </div>
                                         <a class="carousel-control-prev" href="#carousel2Controls" role="button"
@@ -548,7 +548,7 @@
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img class="d-block w-100" src="./images/Past Placements/2023 final.svg"
+                                                <img class="d-block w-100" src="./images/Past Placements/2023 final.png"
                                                     alt="Placement Records">
                                             </div>
                                         </div>
@@ -623,7 +623,7 @@
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100"
-                                                    src="./images/Past Placements/5year final.svg"
+                                                    src="./images/Past Placements/5year final.png"
                                                     alt="Placement Records">
                                             </div>
                                         </div>
