--- a/past-placements.html
+++ b/past-placements.html
@@ -396,7 +396,7 @@
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img class="d-block w-100" src="./images/Past Placements/2021 final.png"
+                                                <img class="d-block w-100" src="./images/past placements/2021 final.svg"
                                                     alt="Placement Records 2021">
                                             </div>
                                         </div>
@@ -474,7 +474,7 @@
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img class="d-block w-100" src="./images/Past Placements/2022 final.png"
+                                                <img class="d-block w-100" src="./images/past placements/2022 final.svg"
                                                     alt="Placement Records 2022">
                                             </div>
                                         </div>
@@ -548,8 +548,8 @@
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img class="d-block w-100" src="./images/Past Placements/2023 final.png"
-                                                    alt="Placement Records">
+                                                <img class="d-block w-100" src="./images/past placements/2023 final.svg"
+                                                    alt="Placement Records 2023">
                                             </div>
                                         </div>
                                         <a class="carousel-control-prev" href="#carousel3Controls" role="button"
@@ -623,7 +623,7 @@
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100"
-                                                    src="./images/Past Placements/5year final.png"
+                                                    src="./images/past placements/5year final.svg"
                                                     alt="Placement Records">
                                             </div>
                                         </div>
