--- a/past-placements.html
+++ b/past-placements.html
@@ -327,8 +327,8 @@
                         <div class="tabs-custom tabs-horizontal tabs-line" id="tabs-1">
                             <!-- Nav tabs-->
                             <ul class="nav nav-tabs">
-                                <li class="nav-item active" role="presentation"><a class="nav-link active" href="#tabs-1-1"
-                                        data-toggle="tab">2021</a></li>
+                                <li class="nav-item active" role="presentation"><a class="nav-link active"
+                                        href="#tabs-1-1" data-toggle="tab">2021</a></li>
                                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-2"
                                         data-toggle="tab">2022</a></li>
                                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-3"
@@ -353,43 +353,35 @@
                                                         <tbody>
                                                             <tr>
                                                                 <td>1</td>
-                                                                <td>EY</td>
+                                                                <td>Amazon</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>2</td>
-                                                                <td>Jugnoo</td>
+                                                                <td>Jungleworks</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>3</td>
-                                                                <td>uTrade</td>
+                                                                <td>IndiaMart</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>4</td>
-                                                                <td>Infosys</td>
+                                                                <td>Nagarro</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>5</td>
-                                                                <td>Quark</td>
+                                                                <td>American Express</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>6</td>
-                                                                <td>Jaro Education</td>
+                                                                <td>o9 Solutions</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>7</td>
-                                                                <td>SML Isuzu</td>
+                                                                <td>uTrade</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>8</td>
-                                                                <td>TT Consultants</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>9</td>
-                                                                <td>Godrej and Boyce</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>10</td>
-                                                                <td>Melior Structures</td>
+                                                                <td>Gemini Solutions</td>
                                                             </tr>
                                                         </tbody>
                                                     </table>
@@ -431,23 +423,23 @@
                                                         <tbody>
                                                             <tr>
                                                                 <td>1</td>
-                                                                <td>Amazon</td>
+                                                                <td>Walmart</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>2</td>
-                                                                <td>American Express</td>
+                                                                <td>Jungleworks</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>3</td>
-                                                                <td>TCS</td>
+                                                                <td>Gemini Solutions</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>4</td>
-                                                                <td>o9 Solutions</td>
+                                                                <td>Block8</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>5</td>
-                                                                <td>Block 8</td>
+                                                                <td>Cvent</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>6</td>
@@ -455,19 +447,11 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>7</td>
-                                                                <td>Code Brews</td>
+                                                                <td>uTrade</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>8</td>
-                                                                <td> Curieo Pvt. Ltd.</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>9</td>
-                                                                <td>Godrej and Boyce</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>10</td>
-                                                                <td>Melior Structures</td>
+                                                                <td>Webmob</td>
                                                             </tr>
                                                         </tbody>
                                                     </table>
@@ -509,39 +493,35 @@
                                                         <tbody>
                                                             <tr>
                                                                 <td>1</td>
-                                                                <td>Walmart</td>
+                                                                <td>Cvent</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>2</td>
-                                                                <td>Jungleworks</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>3</td>
-                                                                <td>TCS</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>4</td>
                                                                 <td>Infosys</td>
                                                             </tr>
                                                             <tr>
+                                                                <td>3</td>
+                                                                <td>Hindustan Unilever Ltd</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td>4</td>
+                                                                <td>Edifecs</td>
+                                                            </tr>
+                                                            <tr>
                                                                 <td>5</td>
-                                                                <td>IndiaMART</td>
+                                                                <td>uTrade</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>6</td>
-                                                                <td>Gemini Solutions</td>
+                                                                <td>FIS</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>7</td>
-                                                                <td>L&T</td>
+                                                                <td>HashedIn</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>8</td>
-                                                                <td>Icuerious</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>9</td>
-                                                                <td>Wipro</td>
+                                                                <td>Zscaler</td>
                                                             </tr>
                                                         </tbody>
                                                     </table>
