--- a/events.html
+++ b/events.html
@@ -4,7 +4,18 @@
 <!-- /forms.html  35  -->
 
 <head>
-    <title>Events</title>
+    <title>
+        Events | Training and Placement Cell, Chandigarh College of Engineering and
+        Technology
+      </title>
+      <meta
+        name="title"
+        content="Events | Training and Placement Cell, Chandigarh College of Engineering and Technology"
+      />
+      <meta
+        name="description"
+        content="The Training and Placement Cell webpage of CCET is a government-affiliated engineering college that is also affiliated with Panjab University. It caters to various branches like CSE (Computer Science and Engineering), ECE (Electronics and Communication Engineering), Mech (Mechanical Engineering), and Civil Engineering."
+      />
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport"
         content="width=device-width height=device-height initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
