--- a/contact-us.html
+++ b/contact-us.html
@@ -436,7 +436,7 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images\new eb post 2024\Jaskirat.jpg">
+              <img class="team-img" src="images\new eb post 2024\jaskirat.jpg">
               <div class="overlayteam" style="text-align: center;"><a href="https://in.linkedin.com/in/jaskirat-kaur23"
                   target="_blank">
                   <i class="fa fa-linkedin-square" style="font-style: normal;"></i>
@@ -455,7 +455,7 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images\new eb post 2024\Tushar.jpg">
+              <img class="team-img" src="images\new eb post 2024\tushar.jpg">
               <div class="overlayteam" style="text-align: center;"><a
                   href="https://in.linkedin.com/in/tushar-singh-b0b964238" target="_blank">
                   <i class="fa fa-linkedin-square" style="font-style: normal;"></i>
@@ -496,7 +496,7 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images\new eb post 2024\aniket_.jpg">
+              <img class="team-img" src="images\new eb post 2024\Aniket_.jpg">
               <div class="overlayteam" style="text-align: center;"><a
                   href="https://www.linkedin.com/in/aniket-verma-183010220/" target="_blank"><i
                     class="fa fa-linkedin-square" style="font-style: normal;"></i>
@@ -534,7 +534,7 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images\new eb post 2024\Krishana.jpg">
+              <img class="team-img" src="images\new eb post 2024\krishana.jpg">
               <div class="overlayteam" style="text-align: center;"><a
                   href="https://www.linkedin.com/in/krishana-singla-9704941a4/" target="_blank"><i
                     class="fa fa-linkedin-square" style="font-style: normal;"></i>
